Bug 888781 part 1 - Use cached default scale in GetDefaultScaleInternal of Windows. r=jimm

MozReview-Commit-ID: Ebm7h3h2mrg